Dec 22 2003  3.1.0  Increased max wep key size to 32 hex pairs
                    Fixed gpsmap dupeiv
                    Revamped gpsmap power level colormap assignment
Dec 21 2003  3.1.0  Added discarding of large management and phy frames as an
                     effort to minimize the impact of junk frames from some
                     drivers.
                    Fixed errors in sourcetracker when child processes aren't
                     used
                    Fixed display of card levels in panel client
                    Fixed fetching of signal levels from cisco cards (for
                     whatever thats worth since they lie)
Dec 19 2003  3.1.0  Changed some viha stuff, maybe fixed some problems.
                    Made child channel control spawning far more intelligent
                    Merged viha into root process, forced disable of setuid
                     dropping when using viha
                    Returned to initial channel control for viha with new
                     change framework
Dec 17 2003  3.1.0  Fixed initial channel setting on hostap
                    Fixed GPSD support to work with tgpsd
Dec 16 2003  3.1.0  Added duplicate IV per BSSID detection, logging, and 
                     panelfront display via 'dupeiv' column.
Dec 14 2003  3.1.0  Added per-cardtype FCS stripping
Dec 13 2003  3.1.0  Stopped counting unlogged beacon frames as discarded.
                    Updated fuzzycrypt line in default config
Dec 12 2003  3.1.0  Added sourcename to the packet protocol and transmission
                     of sourcename via drone->server.  This breaks old drones.
                    Updated drone default config
                    Moved wlan-ng sources inside wext ifdef for channel fetch
Dec 11 2003  3.1.0  Put casting and malloc testing into channel change packet
                    Added gpsd/timetracker NULL initialization to packetsource 
                    Fixed various quirks exposed by Valgrind